fix: remove redundant text align property

--- a/src/TestingDemo.Client/src/components/AuthContainer.module.css
+++ b/src/TestingDemo.Client/src/components/AuthContainer.module.css
@@ -35,7 +35,6 @@
   flex-direction: column;
   justify-content: flex-end;
   flex: 1;
-  text-align: center;
 }
 
 .copyRightContainer>p {
